added urls in config

--- a/BuildingManager/appsettings.json
+++ b/BuildingManager/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Building1": "https://designdaysbuilding1.azurewebsites.net/",
+    "BuildingGreenveld": "https://designdaysbuildingredzicht.azurewebsites.net/",
+    "BuildingRedzicht": "https://designdaysbuildinggreenveld.azurewebsites.net/",
+    "PowerCompany": "https://designdayspowercompany.azurewebsites.net/",
+    "WeatherStation": "https://designdaysweatherstation.azurewebsites.net/"
+  }
 }
